force-app/main/default/objects/Customer_Service_Agent__c/Customer_Service_Agent__c.object-meta.xml
<CustomObject>
    <label>Customer Service Agent</label>
    <nameField>
        <label>Customer Service Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Service Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>