force-app/main/default/objects/Customer_Service_Agent__c/fields/Active_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Active_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active/Inactive</label>
    <type>Checkbox</type>
</CustomField>