force-app/main/default/objects/Customer_Service_Agent__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Customer Service Agents</relationshipLabel>
    <relationshipName>Customer_Service_Agents</relationshipName>
    <type>Lookup</type>
</CustomField>