force-app/main/default/objects/Customer_Service_Agent__c/fields/Emergency_Case__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emergency Case</label>
    <referenceTo>Emergency_Case__c</referenceTo>
    <relationshipLabel>Customer Service Agents</relationshipLabel>
    <relationshipName>Customer_Service_Agents</relationshipName>
    <type>Lookup</type>
</CustomField>