force-app/main/default/objects/Customer_Service_Agent__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <displayFormat>CSA-{000}</displayFormat>
    <label>Employee ID</label>
    <type>AutoNumber</type>
</CustomField>